add the other two recipes and add a title to carbonara

--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Carbonara</title>
   </head>
   <body>
     <h1>Carbonara</h1>
@@ -44,5 +44,6 @@
         Season with salt and pepper (remember that bacon and Parmesan are very salty).</li>
       <li>Serve warm with chopped parsley sprinkled on top and extra Parmesan cheese at the table.</li>
     </ol>
+    <a href="../index.html" rel="noopener noreferrer">Back to main page</a>
   </body>
 </html>
