--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   </head>
   <body>
     <h1>Odin recipes</h1>
-    <a href="./recipes/carbonara.html" rel="noopener noreferrer">Carbonara</a>
+    <ul>
+      <li><a href="./recipes/carbonara.html" rel="noopener noreferrer">Carbonara</a></li>
+      <li><a href="./recipes/butter-chicken.html" rel="noopener noreferrer">Butter Chicken</a></li>
+      <li><a href="./recipes/lamb-chops.html" rel="noopener noreferrer">Lamb Chops</a></li>
+    </ul>
   </body>
 </html>
