add more css to index-page and delete list from index.html

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <title>Main page</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <h1>Odin recipes</h1>
-    <ul>
-      <li><a href="./recipes/carbonara.html" rel="noopener noreferrer">Carbonara</a></li>
-      <li><a href="./recipes/butter-chicken.html" rel="noopener noreferrer">Butter Chicken</a></li>
-      <li><a href="./recipes/lamb-chops.html" rel="noopener noreferrer">Lamb Chops</a></li>
+    <h1 class="bigrecipes">Odin recipes</h1>
+    <div class="container">
+      <b><a class="smallrecipes first" href="./recipes/carbonara.html" rel="noopener noreferrer">Carbonara</a></b>
+      <b><a class="smallrecipes second" href="./recipes/butter-chicken.html" rel="noopener noreferrer">Butter Chicken</a></b>
+      <b><a class="smallrecipes third" href="./recipes/lamb-chops.html" rel="noopener noreferrer">Lamb Chops</a></b>
     </ul>
   </body>
 </html>
