--- a/recipes/lamb-chops.html
+++ b/recipes/lamb-chops.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <title>Lamb Chops</title>
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
     <h1>Simple Grilled Lamb Chops</h1>
     <img src="https://static01.nyt.com/images/2023/03/21/multimedia/SRO-Lamb-Chops-mlcv/SRO-Lamb-Chops-mlcv-videoSixteenByNineJumbo1600.jpg" alt="Lamb Chops serving" height="400" width="700">
-    <h3>Lamb Chops</h3>
+    <h3 class="smallerheaders">Lamb Chops</h3>
     <p><i>These grilled lamb chops are easy to prepare with a 
         tasty garlicky marinade for flavorsome, juicy results.</i></p>
-    <h4>Ingredients:</h4>
-    <ul>
+    <h4 class="smallerheaders">Ingredients:</h4>
+    <ul class="ingredients">
       <li>1 onion, thinly sliced</li>
       <li>¼ cup distilled white vinegar</li>
       <li>2 tablespoons olive oil</li>
@@ -20,8 +21,8 @@
       <li>½ teaspoon black pepper</li>
       <li>6 (6 ounce) lamb chops</li>
     </ul>
-    <h4>Steps:</h4>
-    <ol>
+    <h4 class="smallerheaders">Steps:</h4>
+    <ol class="steps">
       <li>Mix together onion, vinegar, oil, garlic, salt, and pepper 
         in a large resealable bag. Add lamb, seal bag, and toss to coat. 
         Marinate in the refrigerator for 2 hours.</li>
